[BAHIR-112] Build Scala, enable Scalatest, enable Scalastyle
...and address code style violations in Scala sources:
- license header format
- missing newline character at end of file

Closes #16